# Lazy-Trading-Bot

./: .env.example  .gitignore  .mutmut-cache  .pre-commit-config.yaml  CHANGES.md  README.md  apply_telemetry.py  audit_out.txt  audit_results.json  audit_results.txt  audit_vram.py  diag_results.json  done.md  dump_errs.py  dump_errs_filtered.txt  dump_errs_utf8.py  exec_error.txt  failures.json  failures.md  final_audit_results.txt  install_audit.txt  layout_debug.txt  lint_out.txt  lint_results.txt  lint_sync.txt  mypy_out.txt  mypy_utf8.txt  output.txt  package-lock.json  package.json  parse_results.py  pks.txt  pyproject.toml  pytest.ini  pytest_failures.txt  pytest_out.txt  pytest_out2.txt  pytest_out3.txt  requirements.txt  results.xml  (+43 more)
app/: config.py  database.py  main.py
done/: audit_last_3_runs.md  dashboard_model_display.md  fix_leaderboard_model_sync.md  guardrails.md  llm_parsing_encoding_fix.md  llm_powered_import.md  llm_streaming_timeout_fix.md  phase_toggle_fix.md  pipeline_and_vram_fixes_report.md  pipeline_quality_fixes.md  pipeline_rebuild_round1.md  pipeline_status_fix.md  post_fix_hardening_plan.md  reddit_data_fix.md  terminal_functions.md  ticker_disambiguation_plan.md  trading_pipeline_audit.md  vllm_thinking_and_prism_bridge.md
frontend/: README.md
plan/: PROBLEMS.md  avg_tokens_per_sec_investigation.md  bot_trading_logic_upgrade.md  chart_timeframe_controls.md  database_separation.md  database_separation_phase1.md  enhance_logging_and_audit.md  fix_portfolio_zero_cash.md  llm_powered_import.md  model_audit_report.md  phase_toggle_fix.md  (+7 more)
(+359 files in other folders)
